# plc_logger

./: .gitignore  README.md  __init__.py  agent_service.spec  console.md  error.md  immediateRequirement.md  instruction.md  main.py  opc_client.py  opc_server.py  opc_server2.py  package-lock.json  patch.diff  plclogger-agent.spec  requirements.md  requirements.txt  system.md
agent/: .env.example  agent_service.py  pyproject.toml  run_agent.py
agent/db_dev_scripts/: setup_db.py
agent/plc_agent/: metrics.py
agent/plc_agent/api/: app.py  appdb.py  database.py  security.py  server.py  store.py
agent/plc_agent/api/routers/: __init__.py  auth.py  db_metrics.py  devices.py  health.py  jobs.py  mappings.py  networking.py  reports.py  schemas.py  storage.py  system.py  tables.py
apps/desktop/: index.html  package-lock.json  package.json  vite.config.js
apps/desktop/src/: App.jsx  index.jsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Chart.jsx  ConfirmDialog.jsx  DataGrid.jsx  FormRow.jsx  TableToolbar.jsx  Toast.jsx  index.js
config/: defaults.json
config/samples/mappings/: sample_mapping.csv
config/samples/parent_schemas/: htpanel.json  inverter.json  ltpanel.json
installer/: installer.nsi  installer.wxs
installer/wix/: AgentGroup.wxs  Extras.wxs  Main.wxs  UiGroup.wxs
scripts/: build_agent.ps1  build_all.ps1  build_wix.ps1  db_inspect.py  dev_start.ps1  install_service.ps1  make_default_icon.ps1  run_snippet.py  sign_artifacts.ps1  verify_agent.ps1
(+29 files in other folders)
