[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plc-agent"
version = "0.1.0"
description = "Python agent for PLC Logger (HTTP API)"
requires-python = ">=3.9"

[project.optional-dependencies]
full = ["fastapi", "uvicorn[standard]", "pymodbus", "opcua"]

